--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.8",
+    "bootstrap": "^5.2.1",
     "next": "latest",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.35.0",
+    "yup": "^0.32.11"
   }
 }
